deploy/overlays/develop/patch-deployment.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: platform-api
spec:
  replicas: 1
  template:
    spec:
      containers:
        - name: platform-api
          volumeMounts:
            - mountPath: /etc/secrets
              name: secret
              readOnly: true
          resources:
            requests:
              cpu: "100m"
              memory: "256Mi"
            limits:
              cpu: "500m"
              memory: "512Mi"
      volumes:
        - name: secret
          secret:
            secretName: jifelog-secret
